Cambio las rutas de los imports con dynamic imports y evito doble subscribe en component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,9 @@
     "paths": { //dynamic imports
       "@core/*": ["src/app/core/*"],
       "@material/*": ["src/app//material/*"],
-      "@shared/*": ["src/app//shared/*"],
-      "@admin/*": ["src/app//admin/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@admin/*": ["src/app/admin/*"],
+      "@utils/*": ["src/app/utils/*"],
     }
   }
 }
