--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@sentry/browser": "^5.12.0",
     "core-js": "^2.5.4",
     "firebase": "^6.5.0",
     "flexboxgrid": "^6.3.1",
