--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "@sentry/browser": "^5.12.0",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
     "firebase": "^6.5.0",
     "flexboxgrid": "^6.3.1",
     "hammerjs": "^2.0.8",
@@ -37,9 +38,10 @@
     "@angular/cli": "~8.3.24",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
